--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-featured-article.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-featured-article.html
@@ -4,7 +4,7 @@
         
         <!--/* Featured Article */-->
         <div class="row">
-            <div class="col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1">
+            <div class="col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
                 <div class="featured-category-container col-sm-12">
                     <a href="${data.featured_content.link_url}">
                         <img src="${data.featured_content.image}" class="hidden-xs img-responsive category__image" alt="${data.featured_content.image_alt}"/>
@@ -22,20 +22,20 @@
         <!--/* Desktop/Tablet Layout */-->
         <div class="row hidden-xs visible-sm visible-md visible-lg">
 
-            <sly sly data-sly-test.colMDoffSet="${data.cards.length == 2 ? 'col-md-offset-2' : ''}" />
-
-            <div class="col-sm-10 col-sm-offset-1 ${colMDoffSet}" data-sly-list.slider="${data.cards}" role="listbox">
-                <div class="col-sm-12 ${data.cards.length == 2 ? 'col-md-5' : 'col-md-4'}">
-                    <a href="${slider.link_url}" class="equal-height-row tablet-card">
-                        <div class="related-category--tablet-left">
-                            <img src="${slider.image}" class="img-responsive category__image" alt="${slider.image_alt}"/>
-                        </div>
-                        <div class="category__item--border category__item-innerpadding related-category--tablet-right category__item">
-                            <div class="related-category__title--font category__title--bottompadding">${slider.title}</div>
-                            <div class="category__link--font">${slider.link_text}</div>
-                            <p class="category-item-date"><em>${slider.date_text}</em></p>
-                        </div>
-                    </a>
+            <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
+                <div data-sly-list.slider="${data.cards}" role="listbox">
+                    <div class="col-sm-12 ${data.cards.length == 2 ? 'col-md-6' : 'col-md-4'}">
+                        <a href="${slider.link_url}" class="equal-height-row tablet-card">
+                            <div class="related-category--tablet-left">
+                                <img src="${slider.image}" class="img-responsive category__image" alt="${slider.image_alt}"/>
+                            </div>
+                            <div class="category__item--border category__item-innerpadding related-category--tablet-right category__item">
+                                <div class="related-category__title--font category__title--bottompadding">${slider.title}</div>
+                                <div class="category__link--font">${slider.link_text}</div>
+                                <p class="category-item-date"><em>${slider.date_text}</em></p>
+                            </div>
+                        </a>
+                    </div>
                 </div>
             </div>
 
