--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-featured-article.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-featured-article.html
@@ -44,7 +44,7 @@
         <!--/* Mobile slider */-->
         <div class="row visible-xs">
             <div class="col-xs-10 col-xs-offset-1">
-                <div class="featured-article-carousel-component carousel slide">
+                <div class="featured-article-carousel-component${data.carouselClassUnique} carousel slide">
                     <div class="carousel-inner" data-sly-list.slider="${data.cards}" role="listbox">
                         <a href="${slider.link_url}" class="item ${sliderList.index == 0 ? 'active' : ''}">
                             <div>
@@ -59,7 +59,7 @@
                     </div>
                     <div class="text-center">
                         <ol class="carousel-indicators list-unstyled" data-sly-list.slider1="${data.cards}">
-                            <li data-target=".featured-article-carousel-component" data-slide-to="${slider1List.index}" class="${slider1List.index == 0 ? 'active' : ''}">
+                            <li data-target=".featured-article-carousel-component${data.carouselClassUnique}" data-slide-to="${slider1List.index}" class="${slider1List.index == 0 ? 'active' : ''}">
                                 <span class="sr-only">${slider1List.index}</span>
                             </li>
                         </ol>
