--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/header/css/header.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/header/css/header.css
@@ -39,10 +39,9 @@
   .nav-open.level-2-open { overflow: hidden; position: fixed; width: 100%; }
   .nav-open.level-2-open .mega-menu { visibility: visible; -webkit-transform: translate(0); transform: translate(0); } }
 
-@media screen and (min-width: 992px) { .nav-open.level-2-open .mega-menu { visibility: visible; opacity: 1; overflow-y: auto; height: 400px; } }
+@media screen and (min-width: 992px) { .nav-open.level-2-open .mega-menu { visibility: visible; opacity: 1; }
+  .nav-open.level-2-open .eaton-header--fixed .mega-menu { overflow-y: auto; height: 400px; } }
 
-.aem-AuthorLayer-Edit .eaton-header .mega-menu, .cq-wcm-edit .eaton-header .mega-menu { position: relative !important; visibility: visible !important; opacity: 1 !important; z-index: 99999 !important; }
+.aem-AuthorLayer-Edit .mega-menu, .cq-wcm-edit .mega-menu { position: relative !important; visibility: visible !important; opacity: 1 !important; z-index: 99999 !important; }
 
-.aem-AuthorLayer-Edit .eaton-header .mega-menu__content, .cq-wcm-edit .eaton-header .mega-menu__content { display: block !important; }
-
-.aem-AuthorLayer-Edit .eaton-header .mega-menu--fixed, .cq-wcm-edit .eaton-header .mega-menu--fixed { position: relative !important; }
+.aem-AuthorLayer-Edit .mega-menu__content, .cq-wcm-edit .mega-menu__content { display: block !important; }
