--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/link-list/views/view-vertical.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/link-list/views/view-vertical.html
@@ -1,4 +1,4 @@
-<sly data-sly-use.data="../data/view-vertical-data.js">
+<sly data-sly-use.data="${'../data/view-vertical-data.js' @testdata=properties.testdata}">
 
   <div class="eaton-link-list-vertical">
 
