Fixes on M49 views.

--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link/css/title-text-image-link.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title-text-image-link/css/title-text-image-link.css
@@ -67,7 +67,7 @@
 
 .article-feature-date { margin-bottom: 60px; }
 
-.article-feature-body { margin-bottom: 120px; padding-right: 7%; }
+.article-feature-body { margin-bottom: 120px; padding-right: 7%; font-size: 1.5em; }
 
 @media only screen and (max-width: 767px) { .article-feature-image { margin-top: 60px; }
   .article-feature-title { font-size: 1.1em; margin-top: 30px; }
