--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link/views/view-article-feature.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link/views/view-article-feature.html
@@ -1,8 +1,10 @@
 <sly data-sly-use.data="../data/view-article-feature-data.js">
 
-    <div class="container-fluid eaton-title-text-image eaton-article-feature-view">
+    <!--/* Container */-->
+    <div class="container eaton-title-text-image eaton-article-feature-view">
+
         <div class="row">
-            <div class="col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
+            <div class="col-xs-12">
                 <div>
                     <img src="${data.image}" class="hidden-xs img-responsive article-feature-image" alt="${data.image_alt}" />
                     <img src="${data.mobile_image}" class="visible-xs img-responsive article-feature-image" alt="${data.image_alt}" />
@@ -21,6 +23,7 @@
                 </div>
             </div>        
         </div>
+
     </div>
 
 </sly>
