Featured List - Styles + Data + Markup

--- a/eaton.frontend/src/components/title-text-image-link-list/css/title-text-image-link-list.scss
+++ b/eaton.frontend/src/components/title-text-image-link-list/css/title-text-image-link-list.scss
@@ -11,3 +11,4 @@
 @import "views/view-tile-links";
 @import "views/view-image-only";
 @import "views/view-category-hero";
+@import "views/view-featured-list";
