--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-default.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/list/views/view-default.html
@@ -24,7 +24,7 @@
         <!--/* Mobile slider */-->
         <div class="row visible-xs">
             <div class="col-xs-12">
-                <div class="default-view-carousel-component${data.carouselClassUnique} carousel slide">
+                <div class="default-view-carousel-component carousel slide">
                     <div class="carousel-inner" data-sly-list.slider="${data.cards}" role="listbox">
                         <a href="${slider.link_url}" class="item ${sliderList.index == 0 ? 'active' : ''}" target="${slider._target}">
                             <div>
