--- a/eaton.frontend/src/components/mega-menu/css/mega-menu.scss
+++ b/eaton.frontend/src/components/mega-menu/css/mega-menu.scss
@@ -79,6 +79,10 @@
     transition: opacity 0.1s ease-in-out;
 
     &__col {
+      
+      &:first-child {
+        margin-left: 0;
+      }
 
       &--4 {
         flex-basis: 25%;
