--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/ctabutton/views/view-default.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/ctabutton/views/view-default.html
@@ -1,5 +1,5 @@
-<sly data-sly-use.data="../data/view-default-data.js">
+<sly data-sly-use.data="${'../data/view-default-data.js' @testdata=properties.testdata}">
 
-<a href="${data.cta.url}" target="${data.cta.target}" class="b-button b-button--primary b-button--light">${data.cta.title}</a>
+<a data-sly-test="${data.cta}" href="${data.cta.url}" target="${data.cta.target}" class="b-button b-button--primary b-button--light">${data.cta.title}</a>
 
 </sly>
