--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/title/views/view-default.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/title/views/view-default.html
@@ -1,4 +1,4 @@
-<sly data-sly-use.data="../data/title-data.js">
+<sly data-sly-use.data="${'../data/title-data.js' @testdata=properties.testdata}">
 
   <div class="eaton-title eaton-title--default">
 
