--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/text/views/view-default.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/text/views/view-default.html
@@ -1,4 +1,4 @@
-<sly data-sly-use.data="../data/view-default-data.js">
+<sly data-sly-use.data="${'../data/view-default-data.js' @testdata=properties.testdata}">
 
   <div class="eaton-text-default">
 
