--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/views/view-featured-story.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/views/view-featured-story.html
@@ -10,7 +10,7 @@
                     <div class="featured-story-component__content">
                         <h2 class="featured-story-component__title">${component.title}</h2>
                         <a class="featured-story-component__link" href="${component.link}">
-                            <p class="featured-story-component__text">${component.text}<span class="featured-story-component__arrow glyphicon glyphicon-menu-right arrow"></span></p>
+                            <p class="featured-story-component__text">${component.text}<i aria-hidden="true" class="featured-story-component__arrow glyphicon glyphicon-menu-right arrow"></i></p>
                         </a>
                     </div>
                 </div>
