--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/link-list/css/link-list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/link-list/css/link-list.css
@@ -6,11 +6,18 @@
 
 .eaton-link-list-vertical__list-icon { font-size: 0.75em; margin-left: 0.25em; }
 
+.eaton-link-list-vertical__external-icon { padding-right: 10px; font-size: 1.125em; }
+
+.eaton-link-list-vertical__download-text { width: 100%; margin-left: 30px; font-size: .90em; }
+
+.eaton-link-list-vertical__download-text--description { color: #98A4AE; font-family: Arial, "Arial", sans-serif; }
+
 .dark-theme .eaton-link-list-vertical__eyebrow, .dark-theme .eaton-link-list-vertical__list-link { color: #FFF; }
 
 @media screen and (max-width: 991px) { .eaton-link-list-vertical__eyebrow { margin-bottom: 60px; } }
 
-@media screen and (min-width: 992px) { .eaton-link-list-vertical__eyebrow { margin-bottom: 15px; } }
+@media screen and (min-width: 992px) { .eaton-link-list-vertical__eyebrow { margin-bottom: 15px; }
+  .eaton-link-list-vertical__download-text { width: auto; } }
 
 .eaton-link-list-horizontal__eyebrow { text-transform: uppercase; }
 
