--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/views/view-tile-links.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/views/view-tile-links.html
@@ -14,7 +14,7 @@
             </a>
             <a class="col-xs-12 col-md-3 tile-link-component__element tile-link-component__element--${tileList.index}" data-sly-test="${tile.icon}" href="${tile.link}">
                 <img class="tile-link-component__icon" src="${tile.icon}" alt="">
-                <h2 class="tile-link-component__title">${tile.title} <span class="tile-link-component__arrow glyphicon glyphicon-menu-right arrow"></span></h2>
+                <h2 class="tile-link-component__title">${tile.title} <i aria-hidden="true" class="tile-link-component__arrow glyphicon glyphicon-menu-right arrow"></i></h2>
             </a>
         </div>
     </div>
