remove padding from feature block component

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link/views/view-feature-block.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link/views/view-feature-block.html
@@ -1,4 +1,4 @@
-<div class="feature-block-component container" data-sly-use.data="../data/view-feature-block-data.js">
+<div class="feature-block-component" data-sly-use.data="../data/view-feature-block-data.js">
     <div class="row feature-block-component__container">
         <div class="col-xs-12 col-sm-7 feature-block-component__copy" style="background-color: ${data.backgroundColor @ context='styleString'}">
             <div class="feature-block-component__text">
