--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/views/view-landing-hero.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link-list/views/view-landing-hero.html
@@ -1,5 +1,5 @@
 <template data-sly-template.multiple="${@ param}">
-    <div data-sly-use.data="../data/view-landing-hero-multiple-data.js" class="eaton-landing-hero carousel-component carousel slide" data-ride="carousel" data-pause="hover" data-sly-test="${param.hero.length > 1}">
+    <div data-sly-use.data="${'../data/view-landing-hero-multiple-data.js' @testdata=properties.tesdata}" class="eaton-landing-hero carousel-component carousel slide" data-ride="carousel" data-pause="hover" data-sly-test="${param.hero.length > 1}">
         <!-- Indicators -->
         <ol class="carousel-indicators" data-sly-list.slide="${data.hero}">
             <li data-target=".carousel-component" data-slide-to="${slideList.index}" class="carousel-component__dots ${slideList.index == 0 ? 'active' : ''}"></li>
@@ -16,7 +16,7 @@
                 <div class="carousel-component-slide__caption carousel-caption">
                     <h2 class="carousel-component-slide__title">${slide.title}</h2>
                     <p class="carousel-component-slide__text">${slide.text}</p>
-                    <a class="carousel-component-slide__cta b-button b-button--white" href="${data.cta}" role="button" data-sly-test="${data.cta.length > 0}">See how</a>
+                    <a class="carousel-component-slide__cta b-button b-button--white" href="${data.cta.url}" role="button" data-sly-test="${data.cta.length > 0}">${data.cta.text}</a>
                 </div>
             </div>
             <!-- Controls -->
@@ -32,8 +32,7 @@
     </div>
 </template>
 <template data-sly-template.single="${@ param}">
-
-        <div data-sly-use.data="../data/view-landing-hero-single-data.js" class="eaton-landing-hero eaton-landing-hero--single carousel-component carousel slide " data-ride="carousel" data-pause="hover" data-sly-test="${param.hero.length == 1}">
+        <div data-sly-use.data="${'../data/view-landing-hero-single-data.js' @testdata=param.testdata}" class="eaton-landing-hero eaton-landing-hero--single carousel-component carousel slide " data-ride="carousel" data-pause="hover" data-sly-test="${param.hero.length == 1}">
             <div class="carousel-component-slide carousel-inner" data-sly-list.slide="${data.hero}" role="listbox">
                 <div class="item ${slideList.index == 0 ? 'active' : ''}">
                     <img class="img-responsive hidden-xs" src="${slide.image}" alt="${slide.alt}">
@@ -42,7 +41,7 @@
                         <h2 class="landing-hero-single__title">${slide.title}</h2>
                         <div class="carousel-component-slide__separator" data-sly-test="${properties.showSeparator}"></div>
                         <p class="carousel-component-slide__text">${slide.text}</p>
-                        <a class="carousel-component-slide__cta b-button b-button--light" href="${data.cta}" role="button" data-sly-test="${properties.showCta}">See how</a>
+                        <a class="carousel-component-slide__cta b-button b-button--white" href="${data.cta.url}" role="button" data-sly-test="${properties.showCta}">${data.cta.text}</a>
                     </div>
                 </div>
             </div>
