--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/text/views/view-statement.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/text/views/view-statement.html
@@ -1,4 +1,4 @@
-<sly data-sly-use.data="../data/view-statement-data.js">
+<sly data-sly-use.data="${'../data/view-statement-data.js' @testdata=properties.testdata}">
 
   <div class="eaton-text-statement">
     <p class="eaton-text-statement__content rich-text-container">${ data.text }</p>
