Added testdata to Article Page

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link/views/view-card.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link/views/view-card.html
@@ -2,7 +2,7 @@
 
   <div class="eaton-ttil-card-view">
     <div class="eaton-ttil-card-view__image">
-      <img src="${ data.image }" class="img-responsive" alt="${ data.imageAlt }" />
+      <img src="${ data.imgSrc }" class="img-responsive" alt="${ data.imageAlt }" />
     </div>
     <div class="eaton-ttil-card-view__title b-eyebrow-small text-uppercase">${ data.title }</div>
     <div class="eaton-ttil-card-view__text b-heading-h5">${ data.text }</div>
