--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/title/views/view-witheyebrowandbyline.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/title/views/view-witheyebrowandbyline.html
@@ -6,7 +6,7 @@
     <div data-sly-test="${ properties.toggleInnerGrid }"
       class="container">
       <div class="eaton-title__eyebrow b-eyebrow-small">${ data.eyebrow }</div>
-      <h2 class="eaton-title__headline b-heading-h1">${ data.headline }</h2>
+      <h2 class="eaton-title__headline b-heading-h1">${ data.title }</h2>
       <div data-sly-test="${ data.byline }"
         class="eaton-title__byline b-body-copy-small">${ data.byline }</div>
     </div>
@@ -15,7 +15,7 @@
     <!--/* If Grid NOT-Enabled */-->
     <sly data-sly-test="${ !properties.toggleInnerGrid }">
       <div class="eaton-title__eyebrow b-eyebrow-small">${ data.eyebrow }</div>
-      <h2 class="eaton-title__headline b-heading-h1">${ data.headline }</h2>
+      <h2 class="eaton-title__headline b-heading-h1">${ data.title }</h2>
       <div data-sly-test="${ data.byline }"
         class="eaton-title__byline b-body-copy-small">${ data.byline }</div>
     </sly>
